--- a/training_caption_generator.ipynb
+++ b/training_caption_generator.ipynb
@@ -179,8 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_text = \"D:\\dataflair projects\\Project - Image Caption Generator\\Flickr_8k_text\"\n",
-    "dataset_images = \"D:\\dataflair projects\\Project - Image Caption Generator\\Flicker8k_Dataset\""
+    "dataset_text = \"Flickr_8k_text\"\n",
+    "dataset_images = \"Flicker8k_Dataset\""
    ]
   },
   {
